--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
     width: 400px;
     padding: 10px;
     border-radius: 5px;
+    margin-bottom: 20px;
 }
 
 h1{
@@ -53,10 +54,12 @@ input{
     outline: none;
     width: 45%; 
     padding: 10px;
+    margin: 10px auto;
 }
 
 input:focus{
-    translate: 0px -10px;
+    translate: 0px -5px;
+    box-shadow: 0px 3px 10px rgb(19, 19, 19);
 }
 
 ::placeholder{
