--- a/style.css
+++ b/style.css
@@ -41,11 +41,25 @@ h1{
     font-family: 'Ysabeau', sans-serif;
 }
 
+.mandetory{
+    text-align: center;
+    color: var(--black);
+    background: var(--white);
+    padding: 5px 0px;
+    font-family: 'Ysabeau', sans-serif;
+    font-weight: 400;
+    opacity: 0.5;
+}
+
 .inputContainer{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+}
+
+.input:focus{
+    border: 1px solid white;
 }
 
 input{
