--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@
 }
 
 body{
-    background:url('./img/background.jpg');
+    background-image: url('./img/joanna-kosinska-1_CMoFsPfso-unsplash.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment:fixed;
-}
+} 
 
 .main-container{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -69,11 +70,12 @@ input{
     width: 45%; 
     padding: 10px;
     margin: 10px auto;
+    text-align: center;
 }
 
 input:focus{
     translate: 0px -5px;
-    box-shadow: 0px 3px 10px rgb(19, 19, 19);
+    box-shadow: 0px 3px 5px rgb(110, 104, 104);
 }
 
 ::placeholder{
